Taxes paid alignment fixed

--- a/src/app/modules/itr-filing/itr-wizard/components/tds-on-salary/tds-on-salary.component.scss
+++ b/src/app/modules/itr-filing/itr-wizard/components/tds-on-salary/tds-on-salary.component.scss
@@ -112,3 +112,11 @@
     left:10px;
     top:2px;
 }
+.form-field{
+  margin-left:10px;
+}
+.spcBlw{
+    margin-bottom:30px;
+}
+
+
