--- a/src/app/modules/itr-filing/itr-wizard/components/tds-other-than-salary/tds-other-than-salary.component.scss
+++ b/src/app/modules/itr-filing/itr-wizard/components/tds-other-than-salary/tds-other-than-salary.component.scss
@@ -100,3 +100,10 @@
     margin-top: 20px;
     margin-right: -30px;
 }
+
+.space .field-text-wrapper {
+    cursor: pointer;
+}
+.form-field{
+    margin-left:10px;
+  }
