--- a/src/app/modules/itr-filing/itr-wizard/pages/taxes-paid/taxes-paid.component.scss
+++ b/src/app/modules/itr-filing/itr-wizard/pages/taxes-paid/taxes-paid.component.scss
@@ -166,6 +166,8 @@ tr:nth-child(even) {
   border-radius: 5px;
   border: 1px solid #15799f;
   padding: 8px!important;
+  z-index: 10;
+  position: relative;
 }
 
 .delete-btn:disabled {
